# jobcurator

./: .gitignore  .pylintrc  README.md  README_ADVANCED.md  pyproject.toml  test.py  test_incremental.py
.github/workflows/: pylint.yml  python-publish.yml
src/: test_incremental.py
src/jobcurator/: __init__.py  curator.py  faiss_backends.py  hash_utils.py  minhash_backends.py  models.py  sklearn_backends.py
src/jobcurator.egg-info/: PKG-INFO  SOURCES.txt
src/jobcurator/storage/: __init__.py  base.py  local_store.py  sql_store.py
tests/: .pylintrc
