[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobcurator"
version = "0.1.0"
description = "Hash-based job deduplication and compression with diversity preservation"
authors = [
  { name = "Mouhidine SEIV", email = "mouhidine.seiv@hrflow.ai" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/riminder/jobcurator"
